# soldier-ant-colony

./: README.md
aqua/: Cargo.toml  Config.toml
aqua/aqua-output/: get_price.js
aqua/aqua-scripts/: get_price.aqua
aqua/configs/: ipns_oracle_cfg.json
aqua/scripts/: build.sh
aqua/src/: main.rs
client/: .gitignore  README.md  config.js  config2.js  package-lock.json  package.json
client/src/: constants.js  main.jsx
client/src/components/: Battle.jsx  Landing.jsx  Market.jsx  MintCharacter.jsx  Navbar.jsx  Roadmap.jsx  Vision.jsx  index.js
client/src/components/Arena/: index.jsx
client/src/components/SelectCharacter/: index.jsx
smart_contract/: hardhat.config.js  package-lock.json  package.json
smart_contract/contracts/: AutomateReward.sol  MyEpicGame.sol
smart_contract/scripts/: deploy.js  deploy3.js
